--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,33 @@
+# Dependencies
 node_modules/
-npm-debug.log
-.DS_Store
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
+
+# Environment variables
 .env
+.env.local
+.env.*.local
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+desktop.ini
+
+# Build output
+dist/
+build/
 *.log
+
+# Temporary files
+*.tmp
+temp/
+.cache/
