--- a/package.json
+++ b/package.json
@@ -7,11 +7,20 @@
     "start": "node server.js",
     "dev": "node server.js"
   },
-  "keywords": ["cards", "game", "multiplayer", "socket.io"],
+  "keywords": [
+    "cards",
+    "game",
+    "multiplayer",
+    "socket.io"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
     "socket.io": "^4.6.1"
+  },
+  "devDependencies": {
+    "eslint": "^9.39.2",
+    "prettier": "^3.7.4"
   }
 }
