--- a/package.json
+++ b/package.json
@@ -1,14 +1,32 @@
+{
+  "name": "cards-against-soog",
+  "version": "1.0.0",
+  "description": "Multiplayer Cards Against Humanity game with Hebrew support",
+  "main": "server/index.js",
+  "scripts": {
+    "start": "node server/index.js",
+    "dev": "node server/index.js",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
+  },
+  "keywords": [
+    "cards",
+    "game",
+    "multiplayer",
+    "socket.io"
   ],
   "author": "",
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2",
-    "internal-ip": "^8.0.1",
+    "internal-ip": "^6.2.0",
     "qrcode": "^1.5.4",
     "socket.io": "^4.6.1"
   },
   "devDependencies": {
-    "eslint": "^9.39.2",
-    "prettier": "^3.7.4"
+    "eslint": "^8.54.0",
+    "prettier": "^3.1.0"
   }
 }
